# CauselyV1

agent/: .dockerignore  Dockerfile  README.md  agent.py  charity_research.py  chat.py  download.py  final_charity_data.py  langgraph.json  main.py  model.py  pyproject.toml  search.py
agent/src/: langgraph.json
agent/src/my_endpoint/: agent.py  charity_research.py  chat.py  deep_research.py  delete.py  download.py  final_charity_data.py  langgraph_research_agent.py  main.py  model.py  search.py  state.py
frontend/: .gitignore  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/copilotkit/: route.ts
frontend/src/app/components/: AssistantChat.tsx  Charities.tsx  CharitiesTab.tsx  CustomChat.tsx  Header.tsx  Main.tsx  Progress.tsx  ResearchCanvas.tsx  Researcher.tsx  Resources.tsx
frontend/src/app/copilotkit/: layout.tsx  page.tsx
frontend/src/lib/: types.ts
