[tool.poetry]
name = "research_agent"
version = "0.1.0"
description = ""
authors = ["Bilal <mohdbilal16@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
copilotkit = "^0.1.56a4"
crewai = "^0.118.0"
fastapi = "^0.115.0"
langchain-openai = "0.2.3"
langchain-community = "^0.3.1"
langchain-anthropic = "0.3.17"
langchain-google-genai = "2.0.5"
langchain = "0.3.26"
openai = "^1.52.1"
tavily-python = "^0.5.0"
python-dotenv = "^1.0.1"
uvicorn = ">=0.31.0"
requests = "^2.32.3"
html2text = "^2024.2.26"
langchain-core = "^0.3.25"
langgraph-cli = {extras = ["inmem"], version = "^0.3.3"}
langgraph-checkpoint-sqlite = "^2.0.1"
aiosqlite = "^0.20.0"
aiohttp = "^3.9.3"
langgraph = "0.4.8"
google-search-results = "^2.4.2"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
